# DigestCompilator

./: .env.example  .gitignore  Dockerfile  README.md  entrypoint.sh  fill_db.py  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: publish.yml
app/: depends.py  main.py  settings.py
app/api/: exceptions.py  schemas.py  services.py
app/api/routers/: __init__.py  digest.py  healthchek.py  post.py
app/db/: __init__.py  db.py  repository.py
app/db/migrations/: env.py
app/db/migrations/versions/: ecf1ae095b51_.py  fffdc2913bda_.py
app/db/models/: __init__.py  base.py  links.py  models.py
infra/: docker-compose.local.yml  docker-compose.swag.yml  docker-pg.yml
infra/nginx/: local.conf  swag.conf
tests/: conftest.py  test_api.py
tests/fixtures/: fixture_api.py  fixture_db.py  fixture_repository.py
